[gd_scene load_steps=18 format=2]

[ext_resource path="res://PotionTable/assets/black_sand_hightlight.png" type="Texture" id=1]
[ext_resource path="res://PotionTable/PotionTable.gd" type="Script" id=2]
[ext_resource path="res://PotionTable/assets/whiskey.png" type="Texture" id=3]
[ext_resource path="res://PotionTable/assets/rose_hightlight.png" type="Texture" id=4]
[ext_resource path="res://PotionTable/assets/hottermilk.png" type="Texture" id=5]
[ext_resource path="res://PotionTable/assets/Milk_highlight.png" type="Texture" id=6]
[ext_resource path="res://PotionTable/assets/whiskey_hightlight.png" type="Texture" id=7]
[ext_resource path="res://PotionTable/assets/rose.png" type="Texture" id=8]
[ext_resource path="res://PotionTable/assets/black_sand_2.png" type="Texture" id=9]
[ext_resource path="res://PotionTable/assets/frog_legs_2_h.png" type="Texture" id=10]
[ext_resource path="res://PotionTable/assets/frog_legs_2.png" type="Texture" id=11]
[ext_resource path="res://PotionTable/assets/Buffalo_Tooth_h.png" type="Texture" id=12]
[ext_resource path="res://PotionTable/assets/Buffalo_Tooth.png" type="Texture" id=13]
[ext_resource path="res://PotionTable/assets/Mixing_Bottle.png" type="Texture" id=14]
[ext_resource path="res://PotionTable/assets/Bottle_Filling.png" type="Texture" id=15]
[ext_resource path="res://PotionTable/assets/Alchemist_Table.png" type="Texture" id=16]
[ext_resource path="res://Bar sound with Jazz.wav" type="AudioStream" id=17]

[node name="PotionTable" type="Node2D"]
script = ExtResource( 2 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 16 )
centered = false

[node name="Milk" type="TextureButton" parent="."]
margin_left = 179.869
margin_top = 233.324
margin_right = 351.869
margin_bottom = 625.324
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rose" type="TextureButton" parent="."]
margin_left = 457.679
margin_top = 260.845
margin_right = 644.679
margin_bottom = 545.845
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Whiskey" type="TextureButton" parent="."]
margin_left = 386.337
margin_top = 275.756
margin_right = 540.337
margin_bottom = 519.756
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackSand" type="TextureButton" parent="."]
margin_left = 539.827
margin_top = 242.25
margin_right = 771.827
margin_bottom = 486.25
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrogLegs" type="TextureButton" parent="."]
margin_left = 31.7009
margin_top = 292.509
margin_right = 95.7009
margin_bottom = 356.509
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuffaloTooth" type="TextureButton" parent="."]
margin_left = 104.383
margin_top = 266.137
margin_right = 144.383
margin_bottom = 319.137
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotionBottle" type="Node2D" parent="."]
position = Vector2( 321.644, 202.107 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureProgress" type="TextureProgress" parent="PotionBottle"]
margin_left = -37.1442
margin_top = -23.523
margin_right = 35.8558
margin_bottom = 54.477
max_value = 3.0
value = 3.0
texture_progress = ExtResource( 15 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottle" type="Sprite" parent="PotionBottle"]
texture = ExtResource( 14 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
[connection signal="pressed" from="Milk" to="." method="_on_Milk_pressed"]
[connection signal="pressed" from="Rose" to="." method="_on_Rose_pressed"]
[connection signal="pressed" from="Whiskey" to="." method="_on_Whiskey_pressed"]
[connection signal="pressed" from="BlackSand" to="." method="_on_BlackSand_pressed"]
[connection signal="pressed" from="FrogLegs" to="." method="_on_FrogLegs_pressed"]
[connection signal="pressed" from="BuffaloTooth" to="." method="_on_BuffaloTooth_pressed"]
